# m5-forecasting-accuracy

./: .gitignore  install_jupytelab_ext.sh  pre_commit.sh  pyproject.toml  pyrightconfig.json  setup.cfg
experiments/: DISCOVER_CACHE_LOCAL_PATH  env  evaluator_weight1.npy  evaluator_weight2.npy  evaluator_weight_mat_csr.npz  luigi.cfg  model_params.json  old_model_params.json  preprocess.py  read_data.py  run_experiment.py  run_null_importance.py  submit.ipynb  tena.ipynb  tmp.json  tmp_model_params.json  train.py  train_by_store_id.py
experiments/model_params/: params_day_01.json  params_day_02.json  params_day_03.json  params_day_06.json  params_day_07.json  params_day_08.json  params_day_10.json  params_day_12.json  params_day_15.json  params_day_16.json  params_day_17.json  params_day_18.json  params_day_19.json  params_day_20.json  params_day_21.json  params_day_22.json  params_day_23.json  params_day_26.json  params_day_27.json  params_day_28.json
experiments/old_model_params/: params_day_04.json  params_day_05.json  params_day_09.json  params_day_11.json  params_day_13.json  params_day_14.json  params_day_24.json  params_day_25.json
scripts/: __init__.py  env  luigi.cfg  run_experiment.py  utils.py
scripts/dataset/: __init__.py  get_dataset.py  read_data.py
scripts/evaluate/: evaluator.py
scripts/feature/: __init__.py  dataset.py  get_feature.py  split_feature.py
scripts/fold/: __init__.py  get_fold.py
scripts/model/: day_by_day.py  model_by_store_id.py  model_lightgbm.py
scripts/submit/: predict.py
scripts/train/: fold.py  null_importance.py  (+3 more)
